javascript all works but just need to go back and fix for  not showing the last day when its too early becasue the 5 day forecast hasnt produced it yet

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -11,16 +11,22 @@ header{
     border-right: 1px solid black;
     box-shadow: 2px 2px #888888;
 }
-h3{
+h4{
     font-size: 20px !important;
 }
 #forecast5{
     background-color: #283f52;
     color: white;
-    border: 2px solid white;
+    border-right: 2px solid white;
     max-width: 25%;
 }
-#today{
+#forecasttoday{
     border: 1px solid black;
     padding: 2px !important;
+}
+#histbutton{
+    background-color: #aeaeae;
+    border-color: #aeaeae;
+    color: black;
+    margin-bottom: 10px;
 }
